add build.gradle
- remove pom.xml
- update .gitignore
- fix deprecated methods and fields
- move resources directory to src/main/resources
- update Java 8 to 11
- close #7